@@ -227,7 +227,7 @@ $a = 'a' . 'b';
 $a = 'a' . 'abc';
 @f1();
 print('1');
-ref(&$a);
+// ref(&$a);
 $a = $array['index'];
 $a = $object->prop;
 $a = $this->prop;
@@ -242,6 +242,8 @@ $a = isset($object->prop);
 $a = empty($object->prop);
 $a = isset($this->prop);
 $a = empty($this->prop);
+$a = isset(ClassName::$prop);
+$a = empty(ClassName::$prop);
 $a = (int) $b;
 $a = (double) $b;
 $a = (string) $b;
